fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ footer {
         "left_aside     main          right-aside"
         "left_aside     low-content   right-aside"
         "footer         footer        footer";
-    grid-gap: 10px; padding: 10px;
+    grid-gap: 10px; padding: 1000px;
     font-weight: 600; font-size: 20px;
 }
 /* mobile view */
